--- a/contacto.html
+++ b/contacto.html
@@ -11,6 +11,9 @@
         <link href = "https: //fonts.googleapis.com/css2? family = Roboto & display = swap "rel =" stylesheet ">    
         <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
         <script language="javascript" src="js/validacion.js"></script>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@500&family=Josefin+Sans:wght@300&family=Licorice&display=swap" rel="stylesheet">
     </head>
    
    
@@ -23,13 +26,11 @@
                     <span></span>
                     <span></span>
                     <span></span>
-                    <span></span>
                 </a>
                 <a href="Index.html">INICIO</a>
                 <a href="bio.html">BIO</a>
                 <a href="fotos.html">FOTOS</a>
                 <a href="videos.html">VIDEOS</a>
-                <a href="contacto.html">CONTACTO</a>
             </nav>
         </header>
         <div class="formulario">
@@ -52,9 +53,9 @@
     </body>
 
     <footer>
-        <a href="https://www.facebook.com/Mart%C3%ADn-y-Oky-101274174953264"><i class="fab fa-facebook" style="font-size: 30px; color:rgb(226, 105, 25)"></i></a>
-        <a href="https://www.instagram.com/martin_y_oky/"><i class="fab fa-instagram" style="font-size: 30px; color:rgb(226,105,25)"></i></a>
-        <a href="https://www.youtube.com/channel/UC2qwUJsNjTr_CuRp2RD5FGw/featured"><i class="fab fa-youtube" style="font-size: 30px; color:rgb(226,105,25)"></i></a>  
+        <a href="https://www.facebook.com/Mart%C3%ADn-y-Oky-101274174953264"><i class="fab fa-facebook" style="font-size: 50px; color:rgb(0,0,0)"></i></a>
+        <a href="https://www.instagram.com/martin_y_oky/"><i class="fab fa-instagram" style="font-size: 50px; color:rgb(0,0,0)"></i></a>
+        <a href="https://www.youtube.com/channel/UC2qwUJsNjTr_CuRp2RD5FGw/featured"><i class="fab fa-youtube" style="font-size: 50px; color:rgb(0,0,0)"></i></a>  
     </footer>
     
 </html>
