--- a/Index.html
+++ b/Index.html
@@ -5,13 +5,17 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="keywords" content="Martin y Oky, Duo, Cantantes, San Nicolás">
-        <meta name="description" content="Web oficial de Martín y Oky, bio, videos, presentaciones y más.">
+        <meta name="description" content="Web oficial de Martin y Oky, bio, videos, presentaciones y más.">
         <title>Martín y Oky - Oficial</title>
         <link rel="stylesheet" type="text/css" href="estilos.css" />
         <link href = "https: //fonts.googleapis.com/css2? family = Roboto & display = swap "rel =" stylesheet ">    
         <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@500&family=Josefin+Sans:wght@300&family=Licorice&display=swap" rel="stylesheet">
+        
     </head>
-   
+     
 
     <body id="p-inicio">
             <nav id="menú">
@@ -20,9 +24,7 @@
                 <span></span>
                 <span></span>
                 <span></span>
-                <span></span>
                 </a>
-                <a href="Index.html">INICIO</a>
                 <a href="bio.html">BIO</a>
                 <a href="fotos.html">FOTOS</a>
                 <a href="videos.html">VIDEOS</a>
@@ -30,14 +32,14 @@
             </nav>
 
             <div class="contimagen">
-                <img id="imagen" src="fondomyo.jpg" alt="imagen de Martín y Oky">   
+                <img id="imagen" src="logo3myo.jpg" alt="imagen de Martín y Oky">   
             </div>
     </body>
 
     <footer>
-        <a href="https://www.facebook.com/Mart%C3%ADn-y-Oky-101274174953264"><i class="fab fa-facebook" style="font-size: 30px; color:rgb(226, 105, 25)"></i></a>
-        <a href="https://www.instagram.com/martin_y_oky/"><i class="fab fa-instagram" style="font-size: 30px; color:rgb(226,105,25)"></i></a>
-        <a href="https://www.youtube.com/channel/UC2qwUJsNjTr_CuRp2RD5FGw/featured"><i class="fab fa-youtube" style="font-size: 30px; color:rgb(226,105,25)"></i></a>  
+        <a href="https://www.facebook.com/Mart%C3%ADn-y-Oky-101274174953264"><i class="fab fa-facebook" style="font-size: 50px; color:rgb(0,0,0)"></i></a>
+        <a href="https://www.instagram.com/martin_y_oky/"><i class="fab fa-instagram" style="font-size: 50px; color:rgb(0,0,0)"></i></a>
+        <a href="https://www.youtube.com/channel/UC2qwUJsNjTr_CuRp2RD5FGw/featured"><i class="fab fa-youtube" style="font-size: 50px; color:rgb(0,0,0)"></i></a>  
         <p></p>
     </footer>
 </html>
