--- a/Index.html
+++ b/Index.html
@@ -30,7 +30,10 @@
                 <a href="videos.html">VIDEOS</a>
                 <a href="contacto.html">CONTACTO</a>
             </nav>
-
+            <div class="nombre">
+                <h1><b>MARTÍN Y OKY</b></h1>
+            </div>
+            
             <div class="contimagen">
                 <img id="imagen" src="logo3myo.jpg" alt="imagen de Martín y Oky">   
             </div>
