Mas arreglos de responsive

--- a/contacto.html
+++ b/contacto.html
@@ -15,8 +15,6 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@500&family=Josefin+Sans:wght@300&family=Licorice&display=swap" rel="stylesheet">
     </head>
-   
-   
 
     <body id="p-contacto">
         <header>
@@ -33,6 +31,11 @@
                 <a href="videos.html">VIDEOS</a>
             </nav>
         </header>
+        
+        <div class="nombre">
+            <h1><b>MARTÍN Y OKY</b></h1>
+        </div>
+
         <div class="formulario">
             <form id="form" method="post" class="form" onsubmit="return validacion();">
                 <label for="nombre">Nombre*</label><br>
