--- a/fotos.html
+++ b/fotos.html
@@ -33,6 +33,10 @@
             </nav>
         </header>
         
+        <div class="nombre">
+            <h1><b>MARTÍN Y OKY</b></h1>
+        </div>
+        
         <div class="contenedorf">
             <div class="fotcolumna">
                 <img class="responsiveimg" src="pfotos/-1.jpg" alt="Martín y Oky en vivo">
