Agrego telefono en contacto

--- a/contacto.html
+++ b/contacto.html
@@ -40,10 +40,12 @@
             <form id="form" action="https://formspree.io/f/xqkjzzpg" method="POST" class="form">
                 <label for="nombre">Nombre*</label><br>
                 <input type="text" id="nombre" name="nombre" size="60" maxlength="15"><br>
-                <label for="email">E-mail*</label><br>
-                <input type="email" id="email" name="email" size="60" maxlength="40"><br>
+                <label for="telefono">Teléfono*</label><br>
+                <input type="text" id="telefono" name="telefono" size="60" maxlength="40"><br>
                 <label for="asunto">Asunto*</label><br>
                 <input type="text" id="asunto" name="asunto" size="60" maxlength="15"><br>
+                <label for="email">E-mail</label><br>
+                <input type="email" id="email" name="email" size="60" maxlength="40"><br>
                 <label for="comentario">Mensaje</label><br>
                 <textarea name="comentario" rows="15" cols="60"></textarea><br>
                 <button type="button" id="boton1" onclick="validacion() ">ENVIAR</button>
