Detalles de responsive

--- a/contacto.html
+++ b/contacto.html
@@ -36,6 +36,10 @@
             <h1><b>MARTÍN Y OKY</b></h1>
         </div>
 
+        <div class="dato">
+            <p id="dato"><b>Podés contactarnos al correo electrónico martinyoky@gmail.com 
+                <br>sino completando el siguiente formulario</b></p>
+        </div>
         <div class="formulario">
             <form id="form" action="https://formspree.io/f/xqkjzzpg" method="POST" class="form">
                 <label for="nombre">Nombre*</label><br>
@@ -61,6 +65,7 @@
         <a href="https://www.facebook.com/Mart%C3%ADn-y-Oky-101274174953264"><i class="fab fa-facebook" style="font-size: 50px; color:rgb(0,0,0)"></i></a>
         <a href="https://www.instagram.com/martin_y_oky/"><i class="fab fa-instagram" style="font-size: 50px; color:rgb(0,0,0)"></i></a>
         <a href="https://www.youtube.com/channel/UC2qwUJsNjTr_CuRp2RD5FGw/featured"><i class="fab fa-youtube" style="font-size: 50px; color:rgb(0,0,0)"></i></a>  
+        <p>Desarrolla: La Negra - mariaemilialeguizamon@gmail.com</p>
     </footer>
     
 </html>
