--- a/fotos.html
+++ b/fotos.html
@@ -65,5 +65,6 @@
         <a href="https://www.facebook.com/Mart%C3%ADn-y-Oky-101274174953264"><i class="fab fa-facebook" style="font-size: 50px; color:rgb(0,0,0)"></i></a>
         <a href="https://www.instagram.com/martin_y_oky/"><i class="fab fa-instagram" style="font-size: 50px; color:rgb(0,0,0)"></i></a>
         <a href="https://www.youtube.com/channel/UC2qwUJsNjTr_CuRp2RD5FGw/featured"><i class="fab fa-youtube" style="font-size: 50px; color:rgb(0,0,0)"></i></a>  
+        <p>Desarrolla: La Negra - mariaemilialeguizamon@gmail.com</p>
     </footer>
 </html>
